--- a/FilmFinds/Shared/Configuration.xcconfig
+++ b/FilmFinds/Shared/Configuration.xcconfig
@@ -7,3 +7,6 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+
+// MARK: - api endpoint configuration for diferenct schema
+
